--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,11 @@
 .material-icons.primary{
     color: var(--default-primary-color);
 }
+
+.flex--right{
+  display: flex;
+  justify-content: flex-end;
+}
+.mb-20{
+  margin-bottom: 20px;
+}
