--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,4 +29,7 @@
             </md-card-content>
         </md-card>
     </md-grid-tile>
+  <md-grid-tile>
+    <app-unfinished-courses></app-unfinished-courses>
+  </md-grid-tile>
 </md-grid-list>
