--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -11,9 +11,12 @@
         <button *ngIf="editMode" type="submit" md-icon-button class="md-icon-button">
           <md-icon class="primary">check</md-icon>
         </button>
+        <button type="button" md-icon-button class="md-icon-button" (click)="deleteCourse(course.id)">
+          <md-icon>delete</md-icon>
+        </button>
       </md-card-header>
       <md-card-title>
-        <md-input #nameInput [(ngModel)]="course.name" name="name" class="md-headline"
+        <md-input #nameInput [(ngModel)]="course.name" name="name" placeholder="Name" class="md-headline"
                   [disabled]="!editMode">
         </md-input>
       </md-card-title>
