--- a/src/shared/flex-table/flex-table.component.css
+++ b/src/shared/flex-table/flex-table.component.css
@@ -1,52 +1,55 @@
 :root {
-    --color: #BDBDBD;
-    --unit: 1rem;
-    --icon-size: 1.2rem;
+  --color: #BDBDBD;
+  --unit: 1rem;
+  --icon-size: 1.2rem;
 }
 
 flex-table-body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 flex-table-header, flex-table-row {
 }
 
 flex-table-header .flex-table-item {
-    padding: var(--unit) 0;
-    font-weight: bold;
+  padding: var(--unit) 0;
+  font-weight: bold;
 }
 
 .flex-table-item {
-    border-bottom: 1px solid var(--color);
-    display: flex;
-    align-items: center;
+  border-bottom: 1px solid var(--color);
+  display: flex;
+  align-items: center;
 }
 
 .flex-table-item > * {
-    flex: 1;
+  flex: 1;
 }
 
 .flex-table-body__scroll, .flex-table__hidden {
-    height: 100%;
+  height: 100%;
 }
 
 .flex-table-body__scroll {
-    overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .flex-table-body__scroll > flex-table-body {
-    margin-right: -15px;
+  margin-right: -15px;
 }
 
 .flex-table__hidden {
-    overflow: hidden;
+  overflow: hidden;
+  flex-direction: column;
+  display: flex;
 }
 
 flex-table .material-icons {
-    cursor: pointer;
-    color: var(--color);
-    font-size: var(--icon-size);
-    width: var(--icon-size);
-    height: var(--icon-size);
+  cursor: pointer;
+  color: var(--color);
+  font-size: var(--icon-size);
+  width: var(--icon-size);
+  height: var(--icon-size);
 }
